tests/ui/limits/issue-15919-64.no-debuginfo.stderr
error: values of the type `[usize; usize::MAX]` are too big for the target architecture
  --> $DIR/issue-15919-64.rs:10:9
   |
LL |     let x = [0usize; 0xffff_ffff_ffff_ffff];
   |         ^

error: aborting due to 1 previous error

